--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Diary"
   ],
   "author": "Rafal Fajkowski",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/DCSIS-KLM/programming-project-rfajkowski/issues"
   },
